--- a/style.css
+++ b/style.css
@@ -67,13 +67,14 @@ h1 {
 }
 
 .banner-title {
-  backdrop-filter: grayscale(1) blur(2px) brightness(0.8);
+  backdrop-filter: grayscale(1) blur(5px) brightness(0.8);
   color: white;
   font-size: 3rem;
   left: 3rem;
   padding: 1rem;
   top: 50%;
   width: 35%;
+  translate: 0 -50%;
 }
 
 /* Recipe card */
