--- a/style.css
+++ b/style.css
@@ -42,6 +42,10 @@ h1 {
   margin-bottom: 5rem;
 }
 
+section {
+  margin: 5rem 0;
+}
+
 .container {
   margin-inline: auto;
   width: min(90%, 900px);
