--- a/style.css
+++ b/style.css
@@ -130,15 +130,28 @@ a:hover {
   border: 1px solid var(--light-gray);
   overflow: hidden;
   border-radius: 10px;
+  transition: box-shadow 200ms, translate 200ms;
 }
 
 .recipe-card:hover {
   box-shadow: var(--low-shadow);
+  translate: 0 -3px;
+}
+
+.recipe-card:hover .recipe-card-image {
+  scale: 1.2;
+  transition: scale 500ms;
+}
+
+.recipe-card-image-container {
+  width: 100%;
+  height: 150px;
+  overflow: hidden;
 }
 
 .recipe-card-image {
   width: 100%;
-  height: 150px;
+  height: 100%;
 }
 
 .recipe-card-body {
