--- a/style.css
+++ b/style.css
@@ -101,7 +101,28 @@ a:hover {
 
 /* Banner */
 
+@keyframes to-low-scale {
+  from {
+    scale: 1.3;
+  }
+
+  to {
+    scale: 1;
+  }
+}
+
+@keyframes to-full-opacity {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
 .banner {
+  animation: to-low-scale 2s forwards;
   position: relative;
   width: 100vw;
   height: 32rem;
@@ -113,6 +134,7 @@ a:hover {
 }
 
 .banner-title {
+  animation: to-full-opacity 3s forwards;
   backdrop-filter: grayscale(1) blur(5px) brightness(0.8);
   color: white;
   font-size: 3rem;
