added animation to image

--- a/style.css
+++ b/style.css
@@ -186,7 +186,6 @@ a:hover {
 
 .recipe-card:hover .recipe-card-image {
   scale: 1.2;
-  transition: scale 500ms;
 }
 
 .recipe-card-image-container {
@@ -198,6 +197,7 @@ a:hover {
 .recipe-card-image {
   width: 100%;
   height: 100%;
+  transition: scale 1s ease-out 100ms
 }
 
 .recipe-card-body {
